--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^2.0.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.4",
     "geist": "^1.0.0",
     "lucide-react": "^0.290.0",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
