--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "*.{ts,tsx,js,jsx}": "eslint --fix"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.0",
+    "@mdx-js/react": "^3.0.0",
+    "@next/mdx": "^14.0.1",
     "@radix-ui/themes": "^2.0.0",
+    "@types/mdx": "^2.0.9",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
     "geist": "^1.0.0",
@@ -31,6 +35,7 @@
     "@commitlint/config-conventional": "^18.1.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@next/eslint-plugin-next": "^14.0.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/eslint-config-prettier": "^6.11.2",
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.33",
